--- a/config/zones/CM.yaml
+++ b/config/zones/CM.yaml
@@ -5,10 +5,13 @@ bounding_box:
     - 13.581716988154412
 capacity:
   gas:
-    - datetime: '2019-01-01'
+    - datetime: '2017-01-01'
       source: IRENA.org
       value: 268.21
   hydro:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 732.1
     - datetime: '2019-01-01'
       source: IRENA.org
       value: 812.52
@@ -16,13 +19,22 @@ capacity:
       source: IRENA.org
       value: 814.0
   oil:
-    - datetime: '2019-01-01'
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 426.74
+    - datetime: '2018-01-01'
       source: IRENA.org
       value: 433.01
     - datetime: '2021-01-01'
       source: IRENA.org
       value: 434.37
   solar:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 11.58
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 11.84
     - datetime: '2019-01-01'
       source: IRENA.org
       value: 12.7
