--- a/config/zones/LB.yaml
+++ b/config/zones/LB.yaml
@@ -5,15 +5,21 @@ bounding_box:
     - 35.14956636366941
 capacity:
   biomass:
-    - datetime: '2019-01-01'
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 9.0
+    - datetime: '2018-01-01'
       source: IRENA.org
       value: 7.0
   hydro:
-    - datetime: '2019-01-01'
+    - datetime: '2017-01-01'
       source: IRENA.org
       value: 282.0
   oil:
-    - datetime: '2019-01-01'
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 3409.0
+    - datetime: '2018-01-01'
       source: IRENA.org
       value: 3401.12
     - datetime: '2021-01-01'
@@ -23,6 +29,12 @@ capacity:
       source: IRENA.org
       value: 2781.12
   solar:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 36.71
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 54.92
     - datetime: '2019-01-01'
       source: IRENA.org
       value: 76.08
@@ -39,7 +51,7 @@ capacity:
       source: IRENA.org
       value: 1004.89
   wind:
-    - datetime: '2019-01-01'
+    - datetime: '2017-01-01'
       source: IRENA.org
       value: 3.0
 country: LB
