--- a/config/zones/MY.yaml
+++ b/config/zones/MY.yaml
@@ -1,5 +1,11 @@
 capacity:
   biomass:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 800.04
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 809.99
     - datetime: '2019-01-01'
       source: IRENA.org
       value: 882.81
@@ -10,11 +16,14 @@ capacity:
       source: IRENA.org
       value: 904.35
   coal:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 10546.0
     - datetime: '2019-01-01'
       source: IRENA.org
       value: 13170.0
   gas:
-    - datetime: '2019-01-01'
+    - datetime: '2017-01-01'
       source: IRENA.org
       value: 13839.95
     - datetime: '2021-01-01'
@@ -24,6 +33,12 @@ capacity:
       source: IRENA.org
       value: 16121.95
   hydro:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 6145.33
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 6165.33
     - datetime: '2019-01-01'
       source: IRENA.org
       value: 6185.36
@@ -34,13 +49,19 @@ capacity:
       source: IRENA.org
       value: 6214.86
   oil:
-    - datetime: '2019-01-01'
+    - datetime: '2017-01-01'
       source: IRENA.org
       value: 370.3
     - datetime: '2023-01-01'
       source: IRENA.org
       value: 1313.72
   solar:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 393.96
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 545.26
     - datetime: '2019-01-01'
       source: IRENA.org
       value: 893.76
@@ -54,7 +75,7 @@ capacity:
       source: IRENA.org
       value: 1933.25
   unknown:
-    - datetime: '2019-01-01'
+    - datetime: '2017-01-01'
       source: IRENA.org
       value: 974.92
     - datetime: '2023-01-01'
