--- a/config/zones/GF.yaml
+++ b/config/zones/GF.yaml
@@ -5,18 +5,30 @@ bounding_box:
     - 5.78601
 capacity:
   biomass:
-    - datetime: '2020-01-01'
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 1.98
+    - datetime: '2019-01-01'
       source: IRENA.org
       value: 5.08
   hydro:
-    - datetime: '2020-01-01'
+    - datetime: '2017-01-01'
       source: IRENA.org
       value: 120.18
   oil:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 191.67
     - datetime: '2020-01-01'
       source: IRENA.org
       value: 205.67
   solar:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 51.06
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 53.79
     - datetime: '2020-01-01'
       source: IRENA.org
       value: 54.95
