--- a/config/zones/GH.yaml
+++ b/config/zones/GH.yaml
@@ -5,10 +5,16 @@ bounding_box:
     - 11.66263490915729
 capacity:
   biomass:
-    - datetime: '2019-01-01'
+    - datetime: '2017-01-01'
       source: IRENA.org
       value: 8.37
   gas:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 2035.5
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 2132.0
     - datetime: '2019-01-01'
       source: IRENA.org
       value: 2589.0
@@ -22,13 +28,19 @@ capacity:
       source: IRENA.org
       value: 3543.5
   hydro:
-    - datetime: '2019-01-01'
+    - datetime: '2017-01-01'
       source: IRENA.org
       value: 1584.0
     - datetime: '2020-01-01'
       source: IRENA.org
       value: 1584.09
   oil:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 957.0
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 981.0
     - datetime: '2019-01-01'
       source: IRENA.org
       value: 884.0
@@ -39,6 +51,12 @@ capacity:
       source: IRENA.org
       value: 370.0
   solar:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 42.31
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 72.32
     - datetime: '2019-01-01'
       source: IRENA.org
       value: 83.16
@@ -52,7 +70,7 @@ capacity:
       source: IRENA.org
       value: 168.95
   wind:
-    - datetime: '2019-01-01'
+    - datetime: '2017-01-01'
       source: IRENA.org
       value: 0.02
 country: GH
