--- a/config/zones/IS.yaml
+++ b/config/zones/IS.yaml
@@ -5,6 +5,12 @@ bounding_box:
     - 66.5267923041
 capacity:
   geothermal:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 709.96
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 755.56
     - datetime: '2020-01-01'
       source: IRENA.org
       value: 756.16
@@ -12,6 +18,15 @@ capacity:
       source: IRENA.org
       value: 756.21
   hydro:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 1994.75
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 2098.72
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 2104.46
     - datetime: '2020-01-01'
       source: IRENA.org
       value: 2114.42
@@ -19,24 +34,36 @@ capacity:
       source: IRENA.org
       value: 2114.48
   oil:
-    - datetime: '2020-01-01'
+    - datetime: '2017-01-01'
       source: IRENA.org
       value: 0.0
   solar:
-    - datetime: '2020-01-01'
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 4.33
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 5.28
+    - datetime: '2019-01-01'
       source: IRENA.org
       value: 7.0
     - datetime: '2022-01-01'
       source: IRENA.org
       value: 7.04
   unknown:
-    - datetime: '2020-01-01'
+    - datetime: '2017-01-01'
       source: IRENA.org
       value: 116.28
     - datetime: '2021-01-01'
       source: IRENA.org
       value: 126.28
   wind:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 2.43
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 2.4
     - datetime: '2020-01-01'
       source: IRENA.org
       value: 1.8
