--- a/config/zones/JM.yaml
+++ b/config/zones/JM.yaml
@@ -5,10 +5,16 @@ bounding_box:
     - 19.01840067056311
 capacity:
   biomass:
-    - datetime: '2019-01-01'
+    - datetime: '2017-01-01'
       source: IRENA.org
       value: 32.13
   gas:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 120.0
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 145.0
     - datetime: '2019-01-01'
       source: IRENA.org
       value: 339.0
@@ -19,14 +25,20 @@ capacity:
       source: IRENA.org
       value: 499.0
   hydro:
-    - datetime: '2019-01-01'
+    - datetime: '2017-01-01'
       source: IRENA.org
       value: 30.0
   oil:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 892.0
     - datetime: '2019-01-01'
       source: IRENA.org
       value: 891.66
   solar:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 55.51
     - datetime: '2019-01-01'
       source: IRENA.org
       value: 107.01
@@ -37,7 +49,7 @@ capacity:
       source: IRENA.org
       value: 109.61
   wind:
-    - datetime: '2019-01-01'
+    - datetime: '2017-01-01'
       source: IRENA.org
       value: 102.0
 country: JM
