--- a/config/zones/JO.yaml
+++ b/config/zones/JO.yaml
@@ -5,11 +5,14 @@ bounding_box:
     - 33.87779736975472
 capacity:
   biomass:
-    - datetime: '2019-01-01'
+    - datetime: '2017-01-01'
       source: IRENA.org
       value: 13.0
   gas:
-    - datetime: '2019-01-01'
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 2877.0
+    - datetime: '2018-01-01'
       source: IRENA.org
       value: 3428.0
     - datetime: '2020-01-01'
@@ -19,14 +22,14 @@ capacity:
       source: IRENA.org
       value: 3163.0
   hydro:
-    - datetime: '2019-01-01'
+    - datetime: '2017-01-01'
       source: IRENA.org
       value: 6.0
     - datetime: '2021-01-01'
       source: IRENA.org
       value: 3.6
   oil:
-    - datetime: '2019-01-01'
+    - datetime: '2017-01-01'
       source: IRENA.org
       value: 814.0
     - datetime: '2022-01-01'
@@ -36,6 +39,12 @@ capacity:
       source: IRENA.org
       value: 1284.0
   solar:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 417.54
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 760.19
     - datetime: '2019-01-01'
       source: IRENA.org
       value: 970.99
@@ -52,6 +61,12 @@ capacity:
       source: IRENA.org
       value: 1989.93
   wind:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 198.4
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 294.5
     - datetime: '2019-01-01'
       source: IRENA.org
       value: 383.6
