--- a/config/zones/KH.yaml
+++ b/config/zones/KH.yaml
@@ -5,7 +5,10 @@ bounding_box:
     - 15.204564920729169
 capacity:
   biomass:
-    - datetime: '2019-01-01'
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 75.27
+    - datetime: '2018-01-01'
       source: IRENA.org
       value: 75.97
     - datetime: '2020-01-01'
@@ -18,6 +21,12 @@ capacity:
       source: IRENA.org
       value: 75.27
   coal:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 564.2
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 551.2
     - datetime: '2019-01-01'
       source: IRENA.org
       value: 708.7
@@ -31,7 +40,10 @@ capacity:
       source: IRENA.org
       value: 1300.0
   hydro:
-    - datetime: '2019-01-01'
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 979.7
+    - datetime: '2018-01-01'
       source: IRENA.org
       value: 1329.7
     - datetime: '2022-01-01'
@@ -41,6 +53,12 @@ capacity:
       source: IRENA.org
       value: 1791.0
   oil:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 265.98
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 242.61
     - datetime: '2019-01-01'
       source: IRENA.org
       value: 268.58
@@ -57,6 +75,12 @@ capacity:
       source: IRENA.org
       value: 392.35
   solar:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 31.91
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 42.05
     - datetime: '2019-01-01'
       source: IRENA.org
       value: 137.28
@@ -73,6 +97,12 @@ capacity:
       source: IRENA.org
       value: 481.88
   unknown:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 29.16
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 24.21
     - datetime: '2019-01-01'
       source: IRENA.org
       value: 0.95
@@ -83,7 +113,7 @@ capacity:
       source: IRENA.org
       value: 7.65
   wind:
-    - datetime: '2019-01-01'
+    - datetime: '2017-01-01'
       source: IRENA.org
       value: 0.25
 country: KH
