--- a/config/zones/LY.yaml
+++ b/config/zones/LY.yaml
@@ -5,14 +5,17 @@ bounding_box:
     - 33.68127537705416
 capacity:
   gas:
-    - datetime: '2019-01-01'
+    - datetime: '2017-01-01'
       source: IRENA.org
       value: 6271.0
     - datetime: '2023-01-01'
       source: IRENA.org
       value: 6506.0
   oil:
-    - datetime: '2019-01-01'
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 3967.0
+    - datetime: '2018-01-01'
       source: IRENA.org
       value: 4240.0
     - datetime: '2021-01-01'
@@ -22,7 +25,7 @@ capacity:
       source: IRENA.org
       value: 4725.0
   solar:
-    - datetime: '2019-01-01'
+    - datetime: '2017-01-01'
       source: IRENA.org
       value: 5.11
     - datetime: '2021-01-01'
