--- a/config/zones/MU.yaml
+++ b/config/zones/MU.yaml
@@ -3,6 +3,52 @@ bounding_box:
     - -21.00722818421054
   - - 58.29677796777969
     - -19.493469447178505
+capacity:
+  biomass:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 90.65
+  coal:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 182.8
+  hydro:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 61.14
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 61.2
+  oil:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 529.0
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 457.2
+  solar:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 32.76
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 74.55
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 99.36
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 107.68
+    - datetime: '2021-01-01'
+      source: IRENA.org
+      value: 109.67
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 107.65
+  wind:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 10.63
 country: MU
 emissionFactors:
   lifecycle:
@@ -52,5 +98,7 @@ fallbackZoneMixes:
         solar: 0.04942291741728504
         unknown: 0.0
         wind: 0.004813099721722564
+parsers:
+  productionCapacity: IRENA.fetch_production_capacity
 region: Africa
 timezone: Indian/Mauritius
