--- a/config/zones/CG.yaml
+++ b/config/zones/CG.yaml
@@ -4,23 +4,27 @@ bounding_box:
   - - 19.124786247862488
     - 4.2081244322773586
 capacity:
+  biomass:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 12.2
   gas:
-    - datetime: '2018-01-01'
+    - datetime: '2017-01-01'
       source: IRENA.org
       value: 364.0
     - datetime: '2020-01-01'
       source: IRENA.org
       value: 534.0
   hydro:
-    - datetime: '2018-01-01'
+    - datetime: '2017-01-01'
       source: IRENA.org
       value: 213.9
   oil:
-    - datetime: '2018-01-01'
+    - datetime: '2017-01-01'
       source: IRENA.org
       value: 62.66
   solar:
-    - datetime: '2018-01-01'
+    - datetime: '2017-01-01'
       source: IRENA.org
       value: 0.06
     - datetime: '2020-01-01'
