--- a/config/zones/GH.yaml
+++ b/config/zones/GH.yaml
@@ -3,6 +3,76 @@ bounding_box:
     - 4.237072989174393
   - - 1.686211862118654
     - 11.66263490915729
+capacity:
+  biomass:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 8.37
+  gas:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 2035.5
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 2132.0
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 2589.0
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 3224.5
+    - datetime: '2021-01-01'
+      source: IRENA.org
+      value: 3434.5
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 3543.5
+  hydro:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 1584.0
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 1584.09
+  oil:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 957.0
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 981.0
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 884.0
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 414.0
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 370.0
+  solar:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 42.31
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 72.32
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 83.16
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 107.85
+    - datetime: '2021-01-01'
+      source: IRENA.org
+      value: 165.42
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 168.95
+  wind:
+    - datetime: '2017-01-01'
+      source: IRENA.org
+      value: 0.02
 country: GH
 emissionFactors:
   lifecycle:
@@ -52,5 +122,7 @@ fallbackZoneMixes:
         solar: 0.006950597869928555
         unknown: 0.0
         wind: 0.0
+parsers:
+  productionCapacity: IRENA.fetch_production_capacity
 region: Africa
 timezone: Africa/Accra
