Increase delay for CO and MX

--- a/config/zones/CO.yaml
+++ b/config/zones/CO.yaml
@@ -113,7 +113,7 @@ contributors:
   - consideRatio
 country: CO
 delays:
-  production: 48
+  production: 84 # As of 2025-03-17, Colombia's recent maximum delay is 3.5 days
 emissionFactors:
   lifecycle:
     battery discharge:
