--- a/config/zones/MX.yaml
+++ b/config/zones/MX.yaml
@@ -119,6 +119,8 @@ contributors:
   - tuxity
   - consideRatio
 country: MX
+delays:
+  production: 1080 # = 45 * 24 Mexico is known for having a maximum delay of 45 days
 emissionFactors:
   direct:
     unknown:
