US_NEISO fetch consumption forecast parser
Build fetch_consumption_forecast parser
Create test for fetch_consumption_forecast
Upload mock file for test
Create snapshot from test

--- a/config/zones/US-NE-ISNE.yaml
+++ b/config/zones/US-NE-ISNE.yaml
@@ -743,7 +743,7 @@ fallbackZoneMixes:
         wind: 0.035357632711841926
 parsers:
   consumption: EIA.fetch_consumption
-  consumptionForecast: EIA.fetch_consumption_forecast
+  consumptionForecast: US_NEISO.fetch_consumption_forecast
   production: US_NEISO.fetch_production
   productionCapacity: EIA.fetch_production_capacity
   productionPerModeForecast: US_NEISO.fetch_wind_solar_forecasts
