fetch_consumption_forecast and fetch_wind_solar_forecasts (#7909)
* fetch_consumption_forecast and fetch_wind_solar_forecasts

create these parsers
include snapshot test for both
upload mocks
created snapshot
update config file for US-TEX-ERCO

* modify parsers US_ERCOT

Include target_datetime in fetch_consumption_forecast and fetch_wind_solar_forecasts
Update with Enum in US_ERCOT.py and test_US_ERCOT.py
Update snapshot

--- a/config/zones/US-TEX-ERCO.yaml
+++ b/config/zones/US-TEX-ERCO.yaml
@@ -454,6 +454,7 @@ contributors:
   - robertahunt
   - KabelWlan
   - silkeholmebonnen
+  - alejandranavcas
 country: US
 emissionFactors:
   direct:
@@ -759,9 +760,10 @@ fallbackZoneMixes:
         wind: 0.24233286045039404
 parsers:
   consumption: US_ERCOT.fetch_consumption
-  consumptionForecast: EIA.fetch_consumption_forecast
+  consumptionForecast: US_ERCOT.fetch_consumption_forecast
   production: US_ERCOT.fetch_production
   productionCapacity: EIA.fetch_production_capacity
+  productionPerModeForecast: US_ERCOT.fetch_wind_solar_forecasts
 region: Americas
 sources:
   INCER ACV:
