Update fetch_generation_forecast in JP
- Updates the config files of all Japan zones to include the generation forecast parser.
- Implements changes suggested by reviewer
- Adds test for JP-KY fetch generation forecast that was missing before
- Updates snapshot from test

--- a/config/zones/JP-CB.yaml
+++ b/config/zones/JP-CB.yaml
@@ -19,6 +19,7 @@ contributors:
   - lorrieq
   - pierresegonne
   - wobniarin
+  - alejandranavcas
 country: JP
 delays:
   production: 5
@@ -211,6 +212,7 @@ parsers:
   consumptionForecast: JP.fetch_consumption_forecast
   price: JP.fetch_price
   production: JP.fetch_production
+  generationForecast: JP.fetch_generation_forecast
 region: Asia
 sources:
   Chubu Electric Power 2022:
