--- a/config/zones/JP-KY.yaml
+++ b/config/zones/JP-KY.yaml
@@ -14,6 +14,7 @@ contributors:
   - tmslaine
   - lorrieq
   - nessie2013
+  - alejandranavcas
 country: JP
 delays:
   production: 5
@@ -288,5 +289,6 @@ parsers:
   consumptionForecast: JP.fetch_consumption_forecast
   price: JP.fetch_price
   production: JP-KY.fetch_production
+  generationForecast: JP.fetch_generation_forecast
 region: Asia
 timezone: Asia/Tokyo
