--- a/config/zones/JP-CG.yaml
+++ b/config/zones/JP-CG.yaml
@@ -18,6 +18,7 @@ contributors:
   - tmslaine
   - lorrieq
   - PPsyrius
+  - alejandranavcas
 country: JP
 delays:
   production: 5
@@ -202,6 +203,7 @@ parsers:
   consumptionForecast: JP.fetch_consumption_forecast
   price: JP.fetch_price
   production: JP.fetch_production
+  generationForecast: JP.fetch_generation_forecast
 region: Asia
 sources:
   Enerdata 2022 Japanese National Average:
