--- a/config/zones/JP-HR.yaml
+++ b/config/zones/JP-HR.yaml
@@ -18,6 +18,7 @@ contributors:
   - pierresegonne
   - wobniarin
   - PPsyrius
+  - alejandranavcas
 country: JP
 delays:
   production: 5
@@ -184,6 +185,7 @@ parsers:
   consumptionForecast: JP.fetch_consumption_forecast
   price: JP.fetch_price
   production: JP.fetch_production
+  generationForecast: JP.fetch_generation_forecast
 region: Asia
 sources:
   Enerdata 2022 Japanese National Average:
