--- a/config/zones/JP-KN.yaml
+++ b/config/zones/JP-KN.yaml
@@ -17,6 +17,7 @@ contributors:
   - tmslaine
   - lorrieq
   - kongkille
+  - alejandranavcas
 country: JP
 delays:
   production: 5
@@ -271,5 +272,6 @@ parsers:
   consumptionForecast: JP.fetch_consumption_forecast
   price: JP.fetch_price
   production: JP_KN.fetch_production
+  generationForecast: JP.fetch_generation_forecast
 region: Asia
 timezone: Asia/Tokyo
