--- a/config/zones/JP-TH.yaml
+++ b/config/zones/JP-TH.yaml
@@ -20,6 +20,7 @@ contributors:
   - lorrieq
   - PPsyrius
   - mathilde-daugy
+  - alejandranavcas
 country: JP
 delays:
   production: 5
@@ -204,6 +205,7 @@ parsers:
   consumptionForecast: JP.fetch_consumption_forecast
   price: JP.fetch_price
   production: JP.fetch_production
+  generationForecast: JP.fetch_generation_forecast
 region: Asia
 sources:
   Enerdata 2022 Japanese National Average:
