add realtime LMP

--- a/config/zones/US-TEX-ERCO.yaml
+++ b/config/zones/US-TEX-ERCO.yaml
@@ -765,6 +765,7 @@ parsers:
   productionCapacity: EIA.fetch_production_capacity
   productionPerModeForecast: US_ERCOT.fetch_wind_solar_forecasts
   dayaheadLocationalMarginalPrice: US_ERCOT.fetch_dayahead_locational_marginal_price
+  realtimeLocationalMarginalPrice: US_ERCOT.fetch_realtime_locational_marginal_price
 region: Americas
 sources:
   INCER ACV:
