ignore eslint no-named-as-default rule

--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -40,6 +40,7 @@
     "no-constructor-return": "error",
     "no-implicit-coercion": "error",
     "prefer-regex-literals": "error",
+    "import/no-named-as-default": "warn",
     "no-restricted-syntax": [
       "error",
       {
