Change to subzones to bypassedSubZones

--- a/config/zones/RU.yaml
+++ b/config/zones/RU.yaml
@@ -333,7 +333,7 @@ region: Europe
 sources:
   IEA 2015:
     link: https://www.iea.org/statistics/statisticssearch/report/?country=Russia&product=electricityandheat
-subZoneNames:
+bypassedSubZones:
   - RU-1
   - RU-2
   - RU-AS
