--- a/config/zones/BE.yaml
+++ b/config/zones/BE.yaml
@@ -5,6 +5,10 @@ bounding_box:
   - - 6.15665815596
     - 51.4750237087
 capacity:
+  battery storage:
+    - datetime: '2025-01-01'
+      source: entsoe.eu
+      value: 1077.0
   biomass:
     - datetime: '2017-01-01'
       source: entsoe.eu
@@ -29,7 +33,7 @@ capacity:
       value: 1115.0
     - datetime: '2025-01-01'
       source: entsoe.eu
-      value: 1070.0
+      value: 842.0
   gas:
     - datetime: '2017-01-01'
       source: entsoe.eu
@@ -57,7 +61,7 @@ capacity:
       value: 6995.0
     - datetime: '2025-01-01'
       source: entsoe.eu
-      value: 6928.0
+      value: 7706.0
   hydro:
     - datetime: '2017-01-01'
       source: entsoe.eu
@@ -82,7 +86,7 @@ capacity:
       value: 186.0
     - datetime: '2025-01-01'
       source: entsoe.eu
-      value: 190.0
+      value: 181.0
   hydro storage:
     - datetime: '2017-01-01'
       source: entsoe.eu
@@ -146,7 +150,7 @@ capacity:
       value: 9986.05
     - datetime: '2025-01-01'
       source: entsoe.eu
-      value: 10794.0
+      value: 7055.0
   unknown:
     - datetime: '2019-01-01'
       source: entsoe.eu
@@ -154,6 +158,9 @@ capacity:
     - datetime: '2023-01-01'
       source: entsoe.eu
       value: 27.0
+    - datetime: '2025-01-01'
+      source: entsoe.eu
+      value: 228.0
   wind:
     - datetime: '2017-01-01'
       source: entsoe.eu
@@ -178,7 +185,7 @@ capacity:
       value: 5315.0
     - datetime: '2025-01-01'
       source: entsoe.eu
-      value: 5439.0
+      value: 5657.0
 contributors:
   - corradio
   - nessie2013
